# osml-models

./: .buildinfo  .coveragerc  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  environment-py310.yml  environment-py311.yml  environment.yml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  searchindex.js  setup.cfg  tox.ini
.github/workflows/: docker-build.yml  docker-publish-dockerhub.yml  docker-publish-github.yml  docker-publish.yml  docker.yml  documentation-publish.yml  documentation.yaml  main.yml  osml-models-build.yml  osml-models-publish.yml  python-publish.yml  python-tox.yml  release.yml
_apidoc/: aws.osml.html  aws.osml.models.aircraft.app.html  aws.osml.models.aircraft.html  aws.osml.models.centerpoint.app.html  aws.osml.models.centerpoint.html  aws.osml.models.flood.app.html  aws.osml.models.flood.html  aws.osml.models.html  aws.osml.models.server_utils.html
_modules/: index.html
_sources/_apidoc/: aws.osml.models.aircraft.app.rst.txt  aws.osml.models.aircraft.rst.txt  aws.osml.models.centerpoint.app.rst.txt  aws.osml.models.centerpoint.rst.txt  aws.osml.models.flood.app.rst.txt  aws.osml.models.flood.rst.txt  aws.osml.models.rst.txt  aws.osml.models.server_utils.rst.txt  aws.osml.rst.txt
_sources/autoapi/: index.rst.txt
assets/: model_weights.pth
assets/images/: 2_planes.tiff
autoapi/: index.html
autoapi/models/: index.html
conda/: environment-py310.yml  environment.yml
doc/: index.rst
docker/: Dockerfile
scripts/: ecr_push.sh
(+40 files in other folders)
